ocp/ocp-deployment-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: '{APP_NAME}'
  annotations:
    description: FIF basic deploy config template on Openshift
    tags: fif
  labels:
    provider: containerImage
    appname: '{APP_NAME}'
spec:
  type: 'ClusterIP'
  ports:
    - name: '{APP_NAME}-tcp'
      port: 7010
      targetPort: 7010
      protocol: TCP
  selector:
    provider: containerImage
    appname: '{APP_NAME}'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    provider: containerImage
    appname: '{APP_NAME}'
  name: '{APP_NAME}'
spec:
  replicas: 1
  selector:
    matchLabels:
      provider: containerImage
      appname: '{APP_NAME}'
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        provider: containerImage
        appname: '{APP_NAME}'
        annotations: '{BUILD_NUMBER}'
    spec:
      containers:
        - image: '{NEXUS_REPO}/{APP_NAME}:{IMG_TAG}'
          name: '{APP_NAME}'
          imagePullPolicy: Always
          ports:
          - containerPort: 7002
            name: http
            protocol: TCP
          resources:
            requests:
              memory: '3072Mi'
              cpu: '1000m'
            limits:
              memory: '8192Mi'
              cpu: '3000m'
      imagePullSecrets:
        - name: '{IMG_PULL_SECRET}'
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: '{APP_NAME}'
  name: '{APP_NAME}'
spec:
  port:
    targetPort: '{APP_NAME}-tcp'
  to:
    kind: Service
    name: '{APP_NAME}'
    weight: 100
  wildcardPolicy: None
